[tool.poetry]
name = "api_gestion_almacen"
version = "0.1.0"
description = ""
authors = ["michel"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.67.0"
uvicorn = "^0.14.0"
dataset = "^1.5.0"
wxPython = "^4.1.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
